force-app/main/default/objects/NS_PrimaryContact__c/NS_PrimaryContact__c.object-meta.xml
<CustomObject>
    <description>It defines who the Primary Contact is for a service</description>
    <label>Primary Contact</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Primary Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Primary Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>