force-app/main/default/objects/NS_PrimaryContact__c/fields/NS_AccountName__c.field-meta.xml
<CustomField>
    <fullName>NS_AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NS_Primary_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>