force-app/main/default/objects/NS_PrimaryContact__c/fields/NS_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NS_BusinessUnit__c</fullName>
    <description>Associated Business Units</description>
    <label>Associated NS Business Unit(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting</fullName>
            </value>
            <value>
                <fullName>Revenue Waybilling</fullName>
            </value>
            <value>
                <fullName>Unit Train</fullName>
            </value>
            <value>
                <fullName>Equipment Planning</fullName>
            </value>
            <value>
                <fullName>Intermodal Non-Premium</fullName>
                <isActive>false</isActive>
                <label>Intermodal Non-Premium</label>
            </value>
            <value>
                <fullName>Intermodal Premium</fullName>
                <isActive>false</isActive>
                <label>Intermodal Premium</label>
            </value>
            <value>
                <fullName>Revenue Accounting Demurrage</fullName>
                <isActive>false</isActive>
                <label>Revenue Accounting Demurrage</label>
            </value>
            <value>
                <fullName>Revenue Accounting Traffic</fullName>
                <isActive>false</isActive>
                <label>Revenue Accounting Traffic</label>
            </value>
            <value>
                <fullName>Transportation</fullName>
                <isActive>false</isActive>
                <label>Transportation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>