force-app/main/default/objects/NS_PrimaryContact__c/fields/NS_ContactName__c.field-meta.xml
<CustomField>
    <fullName>NS_ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is the  contact name for the Account</description>
    <label>Primary Role Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact must be an Active Contact.</errorMessage>
        <filterItems>
            <field>Contact.NS_ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Contacts</relationshipLabel>
    <relationshipName>NS_Primary_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>