force-app/main/default/objects/NS_PrimaryContact__c/fields/NS_RespectiveFocus__c.field-meta.xml
<CustomField>
    <fullName>NS_RespectiveFocus__c</fullName>
    <description>Primary Contact&#39;s respective focus</description>
    <label>Respective Focus</label>
    <length>180</length>
    <type>Text</type>
</CustomField>