force-app/main/default/objects/NS_PrimaryContact__c/validationRules/NS_CheckContactFromSameAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_CheckContactFromSameAccount</fullName>
    <active>false</active>
    <description>It checks if the contact selected by the user is associated to the selected account .</description>
    <errorConditionFormula>AND( NOT(ISBLANK(NS_ContactName__c)),  NS_ContactName__r.AccountId &lt;&gt; NS_AccountName__r.Id )</errorConditionFormula>
    <errorMessage>Please select a contact who is associated with the selected Account</errorMessage>
</ValidationRule>