force-app/main/default/objects/NS_PrimaryContact__c/validationRules/NS_RestrictInactiveAccountLookup.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_RestrictInactiveAccountLookup</fullName>
    <active>true</active>
    <description>Inactive Account cannot be Linked. Only &quot;OSS Support&quot; or &quot;System Admin&quot; have the ability to do so.</description>
    <errorConditionFormula>AND( 
ISPICKVAL( NS_AccountName__r.NS_StatusIndicator__c , &#39;Inactive&#39;), 
NOT(OR($Profile.Name = &#39;System Administrator&#39;, $Profile.Name = &#39;OSS Support&#39;)) 
)</errorConditionFormula>
    <errorMessage>Inactive Account cannot be Linked. Please contact &quot;OSS Support&quot; or &quot;System Admin&quot;</errorMessage>
</ValidationRule>